@@ -39,6 +39,7 @@ Changelog
  * Added a basic Dockerfile to the project template (Tom Dyson)
  * StreamField blocks now allow custom `get_template` methods for overriding templates in instances (Christopher Bledsoe)
  * Simplified edit handler API (Florent Osmont, Bertrand Bordage)
+ * Made 'add/change/delete collection' permissions configurable from the group edit page (Matt Westcott)
  * Fix: Do not remove stopwords when generating slugs from non-ASCII titles, to avoid issues with incorrect word boundaries (Sævar Öfjörð Magnússon)
  * Fix: The PostgreSQL search backend now preserves ordering of the `QuerySet` when searching with `order_by_relevance=False` (Bertrand Bordage)
  * Fix: Using `modeladmin_register` as a decorator no longer replaces the decorated class with `None` (Tim Heap)
